[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/sound_handler.gd" type="Script" id=1]
[ext_resource path="res://Audio/arrow_shot.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/caster_shot.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/player_death.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/dash.wav" type="AudioStream" id=5]

[node name="SoundHandler" type="Node"]
script = ExtResource( 1 )

[node name="ArrowShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="CasterShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0

[node name="PlayerDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

