extends Node

onready var arrowShoot = get_node("ArrowShoot")
onready var casterShoot = get_node("CasterShoot")
onready var playerDeath = get_node("PlayerDeath")
onready var playerDash = get_node("Dash")
onready var playerHurt = get_node("PlayerHurt")
onready var archerDeath = get_node("ArcherDeath")
onready var casterDeath = get_node("CasterDeath")

func _ready():
    pass
